--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HV'
 - !lcsh 'Punishment'
+- GITenberg
 title: Hanging in Chains
 url: http://www.gutenberg.org/ebooks/46432
